--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiosk",
   "version": "3.0.0",
-  "description": "",
+  "description": "Cast and display contents to a webpage !",
   "main": "src/index.js",
   "dependencies": {
     "express": "^4.17.1"
