--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "kiosk",
   "version": "3.0.0",
   "description": "Cast and display contents to a webpage !",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "dependencies": {
     "express": "^4.17.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/express": "^4.17.2",
+    "@types/node": "^12.12.15",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.3"
+  },
   "scripts": {
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
