--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "kiosk",
   "version": "3.0.0",
   "description": "Cast and display contents to a webpage !",
-  "main": "dist/index.js",
+  "main": "dist/server.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
