--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/server.js",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
