--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "pg": "^7.14.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.29",
     "@types/express": "^4.17.2",
     "@types/node": "^12.12.15",
+    "@types/validator": "^12.0.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.3"
   },
