--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Cast and display contents to a webpage !",
   "main": "dist/server.js",
   "dependencies": {
+    "bufferutil": "^4.0.1",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
@@ -13,6 +14,8 @@
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.2",
+    "socket.io": "^2.3.0",
+    "utf-8-validate": "^5.0.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -21,6 +24,7 @@
     "@types/express": "^4.17.2",
     "@types/helmet": "0.0.45",
     "@types/node": "^12.12.15",
+    "@types/socket.io": "^2.1.4",
     "@types/validator": "^12.0.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.3"
