--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bufferutil": "^4.0.1",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.29",
     "@types/compression": "^1.0.1",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/helmet": "0.0.45",
     "@types/node": "^12.12.15",
