--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "http-status-codes": "^1.4.0",
+    "mime-types": "^2.1.25",
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.8",
     "sequelize": "^5.21.2",
     "socket.io": "^2.3.0",
     "utf-8-validate": "^5.0.2",
@@ -25,9 +28,15 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/helmet": "0.0.45",
+    "@types/jest": "^24.0.24",
+    "@types/mime-types": "^2.1.0",
     "@types/node": "^12.12.15",
+    "@types/request": "^2.48.4",
+    "@types/request-promise-native": "^1.0.17",
     "@types/socket.io": "^2.1.4",
     "@types/validator": "^12.0.1",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.2.0",
     "tslint": "^5.20.1",
     "typescript": "^3.7.3"
   },
@@ -37,7 +46,8 @@
     "copy-statics": "mkdir -p dist/views && cp -rv src/views/* dist/views",
     "prestart": "npm run build && npm run copy-statics",
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
