--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pg-hstore": "^2.3.3",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
+    "semver": "^7.1.3",
     "sequelize": "^5.21.2",
     "socket.io": "^2.3.0",
     "utf-8-validate": "^5.0.2",
@@ -33,6 +34,7 @@
     "@types/node": "^12.12.15",
     "@types/request": "^2.48.4",
     "@types/request-promise-native": "^1.0.17",
+    "@types/semver": "^7.1.0",
     "@types/socket.io": "^2.1.4",
     "@types/validator": "^12.0.1",
     "jest": "^24.9.0",
