--- a/package.json
+++ b/package.json
@@ -8,39 +8,40 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "ejs": "^3.0.1",
+    "ejs": "^3.0.2",
     "express": "^4.17.1",
-    "helmet": "^3.21.2",
+    "helmet": "^3.22.0",
     "http-status-codes": "^1.4.0",
-    "mime-types": "^2.1.25",
-    "pg": "^7.14.0",
+    "mime-types": "^2.1.26",
+    "nocache": "^2.1.0",
+    "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
-    "request": "^2.88.0",
+    "request": "^2.88.2",
     "request-promise-native": "^1.0.8",
     "semver": "^7.1.3",
-    "sequelize": "^5.21.2",
+    "sequelize": "^5.21.5",
     "socket.io": "^2.3.0",
     "utf-8-validate": "^5.0.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.29",
-    "@types/compression": "^1.0.1",
+    "@types/bluebird": "^3.5.30",
+    "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.2",
+    "@types/express": "^4.17.4",
     "@types/helmet": "0.0.45",
-    "@types/jest": "^24.0.24",
+    "@types/jest": "^24.9.1",
     "@types/mime-types": "^2.1.0",
-    "@types/node": "^12.12.15",
+    "@types/node": "^12.12.34",
     "@types/request": "^2.48.4",
     "@types/request-promise-native": "^1.0.17",
     "@types/semver": "^7.1.0",
     "@types/socket.io": "^2.1.4",
     "@types/validator": "^12.0.1",
     "jest": "^24.9.0",
-    "ts-jest": "^24.2.0",
+    "ts-jest": "^24.3.0",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.3"
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
