--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Cast and display contents to a webpage !",
   "main": "dist/server.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bufferutil": "^4.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -13,6 +14,7 @@
     "helmet": "^3.22.0",
     "http-status-codes": "^1.4.0",
     "mime-types": "^2.1.26",
+    "multer": "^1.4.2",
     "nocache": "^2.1.0",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
@@ -26,12 +28,14 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.30",
+    "@types/body-parser": "^1.19.0",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.4",
     "@types/helmet": "0.0.45",
     "@types/jest": "^24.9.1",
     "@types/mime-types": "^2.1.0",
+    "@types/multer": "^1.4.2",
     "@types/node": "^12.12.34",
     "@types/request": "^2.48.4",
     "@types/request-promise-native": "^1.0.17",
